@@ -108,7 +108,12 @@ typedef int _MHD_socket_funcs_size;
 #if !defined(MHD_WINSOCK_SOCKETS)
 #define MHD_SYS_select_(n,r,w,e,t) select((n),(r),(w),(e),(t))
 #else
-#define MHD_SYS_select_(n,r,w,e,t) select((int)0,(r),(w),(e),(t))
+#define MHD_SYS_select_(n,r,w,e,t) \
+ ( (!(r) || ((fd_set*)(r))->fd_count == 0) && \
+   (!(w) || ((fd_set*)(w))->fd_count == 0) && \
+   (!(e) || ((fd_set*)(e))->fd_count == 0) ) ? \
+ ( (!(t)) ? (Sleep((t)->tv_sec * 1000 + (t)->tv_usec / 1000), 0) : 0 ) : \
+ (select((int)0,(r),(w),(e),(t)))
 #endif
 
 #if defined(HAVE_POLL)
